# SymptoThermalNFP

./: README.md  pyproject.toml
apps/mobile/: README.md
docs/: SENSIPLAN_ALGORITHM_SPEC.md  algorithm-audit.md  algorithm-validation-report.md  project-plan.md
docs/agent-reports/: session-2026-04-06.md
tests/: conftest.py  test_algorithm.py  test_models.py  test_storage.py
tests/fixtures/cycles/: anovulatory.yaml  disturbed_temps.yaml  drop_back.yaml  early_mucus_late_temp.yaml  fahrenheit_conversion.yaml  fever.yaml  first_cycle.yaml  slow_rise.yaml  textbook_sharp_rise.yaml
